# wasm-rt

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: leb128.h  main.cpp  module.cpp  module.h
test/: CMakeLists.txt  test.cpp
test/module/: CMakeLists.txt  module.cpp
